--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-:root {
+ :root {
     --dark: #374151;
     --darker: #1f2937;
     --darkest: #111827;
@@ -19,7 +19,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     background: var(--dark);
-    color: #FFF;
+   
 }
 
 header {
@@ -82,7 +82,6 @@ input, button {
 
 main {
     flex: 1 1 0%;
-    
     max-width: 800px;
     width: 100%;
     margin: 0 auto;
@@ -99,7 +98,7 @@ main {
     margin-bottom: 1rem;
 }
 
-#tasks, .task {
+#tasks .task {
     display: flex;
     justify-content: space-between;
     background-color: var(--darkest);
@@ -108,22 +107,27 @@ main {
     margin-bottom: 1rem;
 
 }
-
-#tasks, .task, .content, .text {
+.task .content {
+    flex: 1 1 0%;
+}
+.task .content .text {
     color: var(--light);
     font-size: 1.125rem;
+    width: 100%;
+    display: block;
+    transform: 0.4s;
 }
 
-#tasks, .tasks, .content, .text:not(:read-only) {
+.tasks .content .text:not(:read-only) {
     color: var(--pink);
 }
 
-#tasks, .task, .actions {
+.task, .actions {
     display: flex;
     margin: 0 -0.5rem;
 }
 
-.task, .actions, button {
+.task .actions button {
     cursor: pointer;
     margin: 0 0.5rem;
     font-size: 1.125rem;
@@ -132,19 +136,19 @@ main {
     transition: 0.4s;
 }
 
-.task, .actions, button:hover {
+.task .actions button:hover {
     opacity: 0.8;
 }
 
-.task, .actions, button:active {
+.task .actions button:active {
     opacity: 0.6;
 }
 
-.task, .actions, .edit {
+ .task .actions .edit {
     background-image: linear-gradient(to right, var(--pink), var(--purple)); 
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.task, .actions, .delete {
+.task .actions .delete {
     color: crimson;
-}
+} 
