--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
     --light: #EEE;
     --pink: #EC4899;
     --purple: #885CF6;
+    --green: #A0D8B3;
 }
 
 * {
@@ -180,3 +181,49 @@ main {
 .strike{
     text-decoration: line-through;
 }
+
+#toast {
+    visibility: hidden; 
+    width: 100%;
+    max-width: 450px;
+    background: #f8ffff;
+    border: 1px solid #bedfe6;
+    border-radius: 5px;
+    padding: 20px;
+
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    color: var(--green);
+    text-align: center;
+}
+#toast.show{
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+@keyframes fadein {
+    from {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+@keyframes fadeout {
+    from {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+    to {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+} 
